2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Fixed 8.4ism in the testsuite of a 8.2+ package.

2006-07-19  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (fileutil::jail): Fixed [Tcllib SF Bug 1525172], by
	* fileutil.test:                 Ramon Ribo. Accepted the provided
	                                 solution. Extended the testsuite.

2006-06-16  Andreas Kupries <andreask@activestate.com>

	* fileutil.tcl:  Added commands to compute paths relative to some
	* fileutil.man:  base. Extended testsuite, documentation.
	* fileutil.test: 
	* pkgIndex.tcl: 

2006-04-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man:  Extended documentation.
	* fileutil.test: Extended testsuite for x/exec.
	* fileutil.tcl:  Added x/exec'utable flag to the 'test' command.

2006-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* traverse.tcl: Bug fixes. Added the missing declaration of the
	  dev/inode cache, and moved the restoration of the old working
	  directory in the 8.3 glob -directory emulation to their proper
	  place.

	* traverse.tcl: New file. Object based directory traversal,
	* pkgIndex.tcl: incremental at the core, i.e. can be event-
	  driven. Iterative algorithm, no trouble with deep directory
	  structures anymore. Not documented yet, no testsuite yet.

2006-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Removed some hardcoded paths into my
	  system. Thanks to Michael Schlenker for catching this.

2006-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl:  Extended the tempdir command to allow the user 
	* fileutil.man:  to set a directory to use, exclusively. Updated
	* fileutil.test: both documentation and testsuite.

	* fileutil.tcl:  Added a 'test' command for the quick testing of
	* fileutil.man:  several properties of a given path. Extended
	* fileutil.test: both documentation and testsuite.
